# chip_8_emulator

./: Cargo.toml  README.md
examples/: a_and_plus.chip8  a_plus_a.chip8  draw_a.chip8
src/: chip8.rs  color.rs  main.rs
testbin/: README.md  add_ix.chip8  add_three_nums.chip8  add_xnn.chip8  add_xy.chip8  and_xy.chip8  assign_xy.chip8  draw.chip8  draw_a.chip8  draw_and_pause.chip8  is_eq.chip8  jump_nnn_plus_v0.chip8  not_eq.chip8  or_xy.chip8  set_bcd.chip8  set_i_to_sprite.chip8  set_registers.chip8  shift_left.chip8  shift_right.chip8  skip_if_key_not_pressed.chip8  skip_if_key_pressed.chip8  skip_not_eq_iseq.chip8  skip_not_eq_neq.chip8  stack_math.chip8  sub_xy.chip8  sub_yx.chip8  timers.chip8  xor_xy.chip8  xy_eq.chip8  xy_neq.chip8  xy_neq_eq.chip8  xy_neq_neq.chip8
