[package]
name = "chip_8_emulator"
version = "0.1.0"
authors = ["Adam Melnyk <adam@adammelnyk.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
structopt = { version = "0.3.26", default-features = false }
minifb = "0.24.0"
termion = "1.5.6"
